--- a/packages/core/src/components/divider/divider.scss
+++ b/packages/core/src/components/divider/divider.scss
@@ -7,15 +7,10 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-import { Component, h, Host } from '@stencil/core';
-
-@Component({
-  tag: 'my-component',
-  styleUrl: 'my-component.scss',
-  scoped: true,
-})
-export class MyComponent {
-  render() {
-    return <Host></Host>;
+:host {
+  .line {
+    width: auto;
+    border: 0.031rem solid #9d9d96;
+    opacity: 20%;
   }
 }
