--- a/packages/core/src/components/dropdown-quick-actions/dropdown-quick-actions.scss
+++ b/packages/core/src/components/dropdown-quick-actions/dropdown-quick-actions.scss
@@ -7,15 +7,16 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-import { Component, h, Host } from '@stencil/core';
+:host {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  margin-bottom: 0.25rem;
 
-@Component({
-  tag: 'my-component',
-  styleUrl: 'my-component.scss',
-  scoped: true,
-})
-export class MyComponent {
-  render() {
-    return <Host></Host>;
+  slot::slotted(*) {
+    display: flex;
+    margin-right: 0.625rem;
   }
 }
