refactor(core/theme): replace theme variables

--- a/packages/core/src/components/menu-about-news/menu-about-news.scss
+++ b/packages/core/src/components/menu-about-news/menu-about-news.scss
@@ -93,7 +93,7 @@
 
     path {
       fill: var(--theme-color-1);
-      stroke: var(--theme-color-weak-bdr-1);
+      stroke: var(--theme-color-weak-bdr);
     }
   }
 }
