--- a/packages/core/scss/ix.scss
+++ b/packages/core/scss/ix.scss
@@ -15,10 +15,16 @@
 /* Import global stylings for Web Components */
 @import './../src/components/toast/styles/toast-container';
 
-/* Default themes */
-@import './theme/classic-dark';
-@import './theme/classic-light';
-@import './theme/static-colors';
+/* Default themes v2 */
+// Legacy themes will be replaced with v2 themes
+
+// @import './theme/classic-dark';
+// @import './theme/classic-light';
+// @import './theme/static-colors';
+
+/* Default themes v2 */
+@import './theme/v2/classic-dark';
+@import './theme/v2/classic-light';
 
 /* Common */
 @import './common-variables';
