--- a/packages/core/src/components/event-list-item/event-list-item.scss
+++ b/packages/core/src/components/event-list-item/event-list-item.scss
@@ -22,6 +22,7 @@ $height-single-line: 2.5rem;
   border-radius: $default-border-radius;
   background-color: var(--theme-event-item--background);
   overflow: hidden;
+  transition: $default-time;
   cursor: pointer;
 
   @include hover {
