fix: update latest theme

--- a/packages/core/scss/theme/v2/classic-dark/_borderWidth.scss
+++ b/packages/core/scss/theme/v2/classic-dark/_borderWidth.scss
@@ -10,9 +10,9 @@
       --theme-focus--border-thickness: 0.0625rem;
       --theme-radiobtn--border-thickness: 0.125rem;
       --theme-input--border-thickness: 0.0625rem;
-      --theme-menu--border-thickness: 0;
+      --theme-menu--border-thickness: 0rem;
       --theme-message-bar--border-thickness: 0.125rem;
       --theme-modal--border-thickness: 0.0625rem;
-      --theme-toast--border-thickness: 0;
+      --theme-toast--border-thickness: 0rem;
   }
 }
