--- a/packages/core/scss/theme/v2/classic-dark/_color.scss
+++ b/packages/core/scss/theme/v2/classic-dark/_color.scss
@@ -26,7 +26,7 @@
       --theme-color-component-7: #32a0a040;
       --theme-color-component-7--active: #216b6b52;
       --theme-color-component-error: #310006;
-      --theme-color-component-8: #d6dfe7;
+      --theme-color-component-8: #3e4b51;
       --theme-color-ghost--selected: #32a0a040;
       --theme-color-ghost--selected-hover: #61b6b64d;
       --theme-color-ghost--selected-active: #83c5c55c;
@@ -503,7 +503,7 @@
       --theme-animated-tab-icon--color: var(--theme-color-soft-text);
       --theme-animated-tab-icon--color--hover: var(--theme-color-soft-text);
       --theme-animated-tab-icon--color--active: var(--theme-color-soft-text);
-      --theme-animated-tab-icon--color--selected: var(--theme-color-primary);
+      --theme-animated-tab-icon--color--selected: var(--theme-color-primary--contrast);
       --theme-animated-tab-icon--color--disabled: var(--theme-color-weak-text);
       --theme-animated-tab-circle--background: var(--theme-color-1);
       --theme-animated-tab-circle--background--hover: var(--theme-color-1--hover);
