--- a/packages/core/scss/theme/v2/classic-light/_borderRadius.scss
+++ b/packages/core/scss/theme/v2/classic-light/_borderRadius.scss
@@ -5,7 +5,7 @@
   .theme-classic-light {
       --theme-default-border-radius: 0.25rem;
       --theme-small-border-radius: 0.125rem;
-      --theme-min-border-radius: 0px;
+      --theme-min-border-radius: 0rem;
       --theme-btn--border-radius: var(--theme-default-border-radius);
       --theme-blind--border-radius: var(--theme-default-border-radius);
       --theme-breadcrumb--border-radius: var(--theme-default-border-radius);
