--- a/packages/core/scss/theme/v2/classic-light/_color.scss
+++ b/packages/core/scss/theme/v2/classic-light/_color.scss
@@ -503,7 +503,7 @@
       --theme-animated-tab-icon--color: var(--theme-color-soft-text);
       --theme-animated-tab-icon--color--hover: var(--theme-color-soft-text);
       --theme-animated-tab-icon--color--active: var(--theme-color-soft-text);
-      --theme-animated-tab-icon--color--selected: var(--theme-color-primary);
+      --theme-animated-tab-icon--color--selected: var(--theme-color-primary--contrast);
       --theme-animated-tab-icon--color--disabled: var(--theme-color-weak-text);
       --theme-animated-tab-circle--background: var(--theme-color-1);
       --theme-animated-tab-circle--background--hover: var(--theme-color-1--hover);
