fix: update colors

--- a/packages/core/scss/theme/v2/classic-dark/_color.scss
+++ b/packages/core/scss/theme/v2/classic-dark/_color.scss
@@ -704,7 +704,7 @@
       --theme-toast-timer-track--background: var(--theme-color-0);
       --theme-toast-timer-value--background: var(--theme-color-6);
       --theme-toast--background: var(--theme-color-1);
-      --theme-toast--border-color: var(--theme-color-0);
+      --theme-toast--border-color: var(--theme-color-weak-bdr);
       --theme-toast--color: var(--theme-color-std-text);
       --theme-datepicker-day--border-color: var(--theme-color-0);
       --theme-datepicker-day--border-color--hover: var(--theme-color-0);
