--- a/packages/core/scss/theme/v2/classic-light/_color.scss
+++ b/packages/core/scss/theme/v2/classic-light/_color.scss
@@ -160,7 +160,7 @@
       --theme-chart-tooltip-fill: #ffffffcc;
       --theme-chart-tooltip-bdr: #00000033;
       --theme-workflow-step--color--disabled: var(--theme-color-weak-text);
-      --theme-app-header--color: var(--theme-color-std-text);
+      --theme-app-header--color: var(--theme-color-inv-std-text);
       --theme-app-header--background: var(--theme-color-8);
       --theme-app-header--border-color: var(--theme-color-0);
       --theme-app-header-logo--color: var(--theme-color-logo);
