--- a/packages/core/src/components/map-navigation/map-navigation.scss
+++ b/packages/core/src/components/map-navigation/map-navigation.scss
@@ -80,7 +80,10 @@
       width: 100%;
       padding: 0 $default-space;
 
-      --theme-app-header-logo--color: var(--theme-color-std-text);
+      --theme-app-header--color: var(--theme-map-navigation-header--color);
+      --theme-app-header-logo--color: var(
+        --theme-map-navigation-header-logo--color
+      );
 
       button {
         margin-left: $default-space;
