--- a/packages/core/scss/theme/v2/classic-dark/_color.scss
+++ b/packages/core/scss/theme/v2/classic-dark/_color.scss
@@ -349,7 +349,7 @@
       --theme-input--background--hover: var(--theme-color-1);
       --theme-input--border-color--hover: var(--theme-color-std-bdr);
       --theme-input--background--focus: var(--theme-color-1);
-      --theme-input--border-color--focus: var(--theme-color-std-bdr);
+      --theme-input--border-color--focus: var(--theme-color-primary);
       --theme-input--background--readonly: var(--theme-color-0);
       --theme-input--border-color--readonly: var(--theme-color-0);
       --theme-input--background--disabled: var(--theme-color-0);
