--- a/packages/core/scss/components/_buttons.scss
+++ b/packages/core/scss/components/_buttons.scss
@@ -65,7 +65,7 @@ $button-categories: (primary, secondary);
     }
 
     @include focus-visible {
-      outline: 1px solid var(--focus--border-color);
+      outline: 1px solid var(--theme-color-focus-bdr);
       outline-offset: var(--theme-btn--focus--outline-offset);
     }
 
