--- a/packages/core/scss/components/_checkboxes.scss
+++ b/packages/core/scss/components/_checkboxes.scss
@@ -53,14 +53,14 @@
 
   [type='checkbox'] + label:focus-visible {
     &:before {
-      outline: 0.0625rem solid var(--focus--border-color);
+      outline: 0.0625rem solid var(--theme-color-focus-bdr);
       outline-offset: var(--theme-checkbox--focus--outline-offset);
     }
   }
 
   [type='checkbox']:focus-visible + label {
     &:before {
-      outline: 0.0625rem solid var(--focus--border-color);
+      outline: 0.0625rem solid var(--theme-color-focus-bdr);
       outline-offset: var(--theme-checkbox--focus--outline-offset);
     }
   }
