fix(core): updated visual regression test

--- a/packages/core/src/components/dropdown-quick-actions/test/basic/index.html
+++ b/packages/core/src/components/dropdown-quick-actions/test/basic/index.html
@@ -14,6 +14,21 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body style="width: 100vw; height: 100vh">
-    <my-component />
+    <ix-button id="iconTriggerId">Open</ix-button>
+
+    <ix-dropdown trigger="iconTriggerId">
+      <ix-dropdown-quick-actions>
+        <ix-icon-button icon="cut" ghost></ix-icon-button>
+        <ix-icon-button icon="bulb" outline></ix-icon-button>
+        <ix-icon-button icon="trashcan"></ix-icon-button>
+      </ix-dropdown-quick-actions>
+
+      <ix-divider></ix-divider>
+
+      <ix-dropdown-item icon="star" label="Item 1"></ix-dropdown-item>
+      <ix-dropdown-item icon="document" label="Item 2"></ix-dropdown-item>
+      <ix-dropdown-item icon="bulb" label="Item 3"></ix-dropdown-item>
+    </ix-dropdown>
+    <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
