--- a/packages/core/src/components/checkbox/test/basic/index.html
+++ b/packages/core/src/components/checkbox/test/basic/index.html
@@ -13,7 +13,7 @@ SPDX-License-Identifier: MIT
     />
     <title>Stencil Component Starter</title>
   </head>
-  <body>
+  <body style="padding: 2rem">
     <div style="margin-bottom: 1rem">
       <input type="checkbox" id="checkbox_01" checked />
       <label for="checkbox_01">Simple checkbox</label>
