--- a/packages/core/src/components/checkbox/test/long-text/index.html
+++ b/packages/core/src/components/checkbox/test/long-text/index.html
@@ -13,7 +13,7 @@ SPDX-License-Identifier: MIT
     />
     <title>Stencil Component Starter</title>
   </head>
-  <body>
+  <body style="padding: 2rem">
     <div style="width: 8rem">
       <div style="margin-bottom: 1rem">
         <input type="checkbox" id="checkbox_01" checked />
