--- a/packages/core/src/components/input/test/basic/index.html
+++ b/packages/core/src/components/input/test/basic/index.html
@@ -14,9 +14,9 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body>
-    <form class="needs-validation m-2">
+    <div class="m-2">
       <input class="form-control" placeholder="Enter text here" type="text" />
-    </form>
+    </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
