--- a/packages/core/src/components/split-button/split-button.scss
+++ b/packages/core/src/components/split-button/split-button.scss
@@ -11,13 +11,13 @@
   display: block;
 
   .middle-gap {
-    gap: 2px;
+    gap: 0.125rem;
   }
 
   .left-button-border {
-    border-top-width: 2px;
+    border-top-width: 0.125rem;
     border-right-width: 0;
-    border-left-width: 2px;
-    border-bottom-width: 2px;
+    border-left-width: 0.125rem;
+    border-bottom-width: 0.125rem;
   }
 }
