--- a/packages/core/src/components/split-button/split-button.scss
+++ b/packages/core/src/components/split-button/split-button.scss
@@ -8,5 +8,16 @@
  */
 
 :host {
-  display: block;
+  display: inline-block;
+
+  .middle-gap {
+    gap: 0.125rem;
+  }
+
+  .left-button-border {
+    border-top-width: 0.125rem;
+    border-right-width: 0;
+    border-left-width: 0.125rem;
+    border-bottom-width: 0.125rem;
+  }
 }
