--- a/packages/core/src/components/toggle/toggle.scss
+++ b/packages/core/src/components/toggle/toggle.scss
@@ -209,11 +209,13 @@
       &:before {
         background-color: var(--theme-switch-thumb-off--background--disabled);
         border-color: var(--theme-switch-thumb-off--border-color--disabled);
+        z-index: 1;
       }
 
       .slider-track {
         background-color: var(--theme-switch-off--background--disabled);
         border-color: var(--theme-switch-off--border-color--disabled);
+        opacity: 0.5;
       }
     }
 
