--- a/packages/core/src/components/category-filter/test/categories/index.html
+++ b/packages/core/src/components/category-filter/test/categories/index.html
@@ -28,15 +28,29 @@ SPDX-License-Identifier: MIT
     <script type="module">
       (async () => {
         await window.customElements.whenDefined('ix-category-filter');
+        const categories = {
+          ID_1: {
+            label: 'Vendor',
+            options: ['Apple', 'MS', 'Siemens'],
+          },
+          ID_2: {
+            label: 'Product',
+            options: ['iPhone X', 'Windows', 'APS'],
+          },
+        };
+        const filterState = {
+          tokens: ['Custom filter text'],
+          categories: [
+            {
+              id: 'ID_1',
+              value: 'IBM',
+              operator: 'Not equal',
+            },
+          ],
+        };
         const categoryFilter = document.querySelector('ix-category-filter');
-        categoryFilter.suggestions = [
-          'Option A',
-          'Option B',
-          'Option C',
-          'Option D',
-          'Option E',
-          'Option F',
-        ];
+        categoryFilter.categories = categories;
+        categoryFilter.filterState = filterState;
       })();
     </script>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
