--- a/packages/core/src/components/icon-button/icon-button.scss
+++ b/packages/core/src/components/icon-button/icon-button.scss
@@ -6,13 +6,17 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
+@import 'common-variables';
+
 :host {
-  &.disabled {
+  &[disabled],
+  &.disabled,
+  .disable {
     pointer-events: none;
   }
 
-  .icon-button {
-    padding: 0;
-    overflow: hidden;
+  &.btn-icon-12 {
+    margin: 0px;
+    padding: 0px;
   }
 }
