--- a/packages/core/src/components/button/button.scss
+++ b/packages/core/src/components/button/button.scss
@@ -6,12 +6,8 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
-
-:host {
-  display: inline-block;
-  height: 2rem;
-
-  &.button-disabled {
+:host([disabled], .disabled) {
+  &.btn {
     pointer-events: none;
   }
 }
