--- a/packages/core/src/components/divider/test/basic/index.html
+++ b/packages/core/src/components/divider/test/basic/index.html
@@ -13,7 +13,7 @@ SPDX-License-Identifier: MIT
     />
     <title>Stencil Component Starter</title>
   </head>
-  <body style="width: 100vw; height: 100vh">
+  <body style="padding: 1rem 0; width: 100vw; height: 100vh">
     <ix-divider></ix-divider>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
