Revert "fix(core/button): remove wrapper level (#357)"
This reverts commit 25107ff11a2287967d1fef2d6c12230ff96790f2.

--- a/packages/core/src/components/button/button.scss
+++ b/packages/core/src/components/button/button.scss
@@ -6,8 +6,12 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
-:host([disabled], .disabled) {
-  &.btn {
+
+:host {
+  display: inline-block;
+  height: 2rem;
+
+  &.button-disabled {
     pointer-events: none;
   }
 }
