--- a/packages/core/src/components/button/button.scss
+++ b/packages/core/src/components/button/button.scss
@@ -9,9 +9,15 @@
 
 :host {
   display: inline-block;
+  width: auto;
   height: 2rem;
 
-  &.button-disabled {
+  &.disabled {
     pointer-events: none;
+  }
+
+  .btn {
+    width: 100%;
+    height: 100%;
   }
 }
