test: add unit and improve vr tests

--- a/packages/core/src/components/toggle/test/disabled/index.html
+++ b/packages/core/src/components/toggle/test/disabled/index.html
@@ -14,7 +14,8 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body style="padding: 2rem">
-    <ix-toggle disabled></ix-toggle>
+    <ix-toggle text-off="Offline" text-on="Online" disabled checked></ix-toggle>
+    <ix-toggle text-off="Offline" text-on="Online" disabled></ix-toggle>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
