fix(core/toggle): toggle disable style (#356)
Co-authored-by: Daniel Leroux <daniel.leroux@siemens.com>

--- a/packages/core/src/components/toggle/toggle.scss
+++ b/packages/core/src/components/toggle/toggle.scss
@@ -205,6 +205,7 @@
   &.disabled {
     .slider {
       cursor: initial;
+      opacity: 0.5;
 
       &:before {
         background-color: var(--theme-switch-thumb-off--background--disabled);
