feat(core/menu): responsive behavior

--- a/packages/core/src/components/application-header/application-header.scss
+++ b/packages/core/src/components/application-header/application-header.scss
@@ -37,3 +37,11 @@
     color: var(--theme-app-header-logo--color);
   }
 }
+
+:host(.mode-mobile) {
+  padding-left: 0.5rem;
+
+  .logo {
+    margin-left: 0.5rem;
+  }
+}
