--- a/packages/core/src/components/basic-navigation/basic-navigation.scss
+++ b/packages/core/src/components/basic-navigation/basic-navigation.scss
@@ -34,3 +34,12 @@
     }
   }
 }
+
+:host(.mode-mobile) {
+  .content {
+    margin-left: 0px;
+    width: 100%;
+
+    background-color: green;
+  }
+}
