test: update vrt snapshots

--- a/packages/core/src/components/tabs/test/basic/index.html
+++ b/packages/core/src/components/tabs/test/basic/index.html
@@ -16,12 +16,11 @@ SPDX-License-Identifier: MIT
       .test {
         margin-bottom: 2rem;
         width: 40rem;
-        background-color: #ff00006a;
       }
     </style>
   </head>
   <body>
-    <div style="margin-bottom: 2rem; width: 40rem; background-color: #ff00006a">
+    <div class="test">
       <ix-tabs>
         <ix-tab-item>Example</ix-tab-item>
         <ix-tab-item>Example</ix-tab-item>
