--- a/packages/core/src/components/tabs/test/overflow/index.html
+++ b/packages/core/src/components/tabs/test/overflow/index.html
@@ -40,9 +40,10 @@ SPDX-License-Identifier: MIT
         <ix-tab-item data-tab-id="7">Biggest Tab 7</ix-tab-item>
         <ix-tab-item data-tab-id="8">Biggest Tab 8</ix-tab-item>
       </ix-tabs>
-      <div data-tab-content="0" class="show">Content Tab 1</div>
-      <div data-tab-content="1">Content Tab 2</div>
-      <div data-tab-content="2">Content Tab 3</div>
+      <div data-tab-content="1" class="show">Content Tab 1</div>
+      <div data-tab-content="2">Content Tab 2</div>
+      <div data-tab-content="3">Content Tab 3</div>
+      <div data-tab-content="7">Should be in overflow</div>
     </div>
 
     <script>
