--- a/packages/core/src/components/menu-avatar/menu-avatar.scss
+++ b/packages/core/src/components/menu-avatar/menu-avatar.scss
@@ -26,11 +26,24 @@
     margin-right: 0.75rem;
     transition: 0.15s;
 
-    > svg {
+    > .avatar-image {
       height: 2rem;
       width: 2rem;
       min-height: 2rem;
       min-width: 2rem;
+      border-radius: 100px;
+    }
+
+    > .avatar-initials {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 2rem;
+      width: 2rem;
+      min-height: 2rem;
+      min-width: 2rem;
+      border-radius: 100px;
+      background-color: var(--theme-color-component-3);
     }
 
     #avatar-path-background {
