fix(aggrid): convert px to rem

--- a/packages/aggrid/scss/ix-aggrid.scss
+++ b/packages/aggrid/scss/ix-aggrid.scss
@@ -54,7 +54,7 @@
     color: var(--theme-color-std-text);
     background-color: var(--ag-control-panel-background-color);
     font-family: Siemens Sans;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
@@ -111,7 +111,7 @@
 
   .ag-header-cell {
     font-family: Siemens Sans;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: bold;
     font-stretch: normal;
     font-style: normal;
@@ -122,7 +122,7 @@
 
   .ag-cell {
     font-family: Siemens Sans;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
