feat(core/dropdown): implement submenu and quick actions (#325)
Co-authored-by: Lukas Maurer <lukas.maurer@siemens.com>
Co-authored-by: Daniel Leroux <daniel.leroux@siemens.com>

--- a/packages/core/src/components/dropdown-item/dropdown-item.scss
+++ b/packages/core/src/components/dropdown-item/dropdown-item.scss
@@ -18,6 +18,10 @@
   &.icon-only {
     min-width: 0;
 
+    .dropdown-item > .glyph {
+      margin-inline-end: 0;
+    }
+
     .dropdown-item {
       padding: $tiny-space $small-space;
 
@@ -39,4 +43,8 @@
   .label {
     @include ellipsis;
   }
+}
+
+::slotted(ix-icon) {
+  margin-inline-start: auto;
 }
