feat(core/menu): align menu width with latest design

--- a/packages/core/src/components/menu-avatar/menu-avatar.scss
+++ b/packages/core/src/components/menu-avatar/menu-avatar.scss
@@ -21,10 +21,11 @@
     align-items: center;
     height: 2.5rem;
     max-height: 2.5rem;
-    padding-left: 0.25rem;
-    margin-left: 0.75rem;
-    margin-right: 0.75rem;
     transition: 0.15s;
+    margin-left: 0.3rem;
+    padding-left: 0.3rem;
+    padding-right: 0.3rem;
+    margin-right: 0.3rem;
 
     > .avatar-image {
       height: 2rem;
