--- a/packages/core/src/components/menu/menu.scss
+++ b/packages/core/src/components/menu/menu.scss
@@ -19,11 +19,13 @@ ix-menu {
   z-index: var(--theme-z-index-sticky);
   width: auto;
 
+  --theme-ix-menu-width: 3.25rem;
+
   .menu {
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 4rem;
+    width: var(--theme-ix-menu-width);
     height: 100%;
     padding-block-end: 1rem;
     overflow: hidden;
@@ -36,16 +38,20 @@ ix-menu {
     transition: width var(--animate-duration);
 
     .burger-menu {
-      margin: 0.75rem 0 1rem 0.75rem;
+      margin: 0.75rem 0 1rem 0.35rem;
+    }
+
+    slot[name='bottom']::slotted(*) {
+      background-color: red !important;
     }
   }
 
   .menu-overlay {
     display: block;
     position: absolute;
-    width: calc(100vw - 4rem);
+    width: calc(100vw - var(--theme-ix-menu-width));
     height: 100%;
-    left: 4rem;
+    left: var(--theme-ix-menu-width);
     z-index: -1;
     backdrop-filter: blur(1rem);
     background-color: var(--theme-sidebar-overlay-blur);
