fix(core/select): adjust dropdown placement (#398)

--- a/packages/core/src/components/my-component/my-component.scss
+++ b/packages/core/src/components/my-component/my-component.scss
@@ -10,7 +10,7 @@
 @import 'common-variables';
 
 :host {
-  display: flex;
+  display: block;
   position: relative;
   width: 100vw;
   height: 100vh;
