docs(styling): improve readability and visibility

--- a/packages/documentation/src/css/custom.css
+++ b/packages/documentation/src/css/custom.css
@@ -39,7 +39,7 @@ body {
   --ifm-leading: calc(var(--ifm-leading-desktop) * 1rem);
   --ifm-hr-background-color: var(--theme-color-contrast-text);
   --ifm-hr-height: 0.125rem;
-
+  --ifm-code-border-radius: 0px;
   --bs-alert-bg: var(--theme-color-alarm) !important;
 }
 
@@ -174,14 +174,6 @@ aside {
   margin: 0px;
 }
 
-.theme-doc-sidebar-item-category {
-  padding: 4px 0px;
-  border: 2px solid var(--theme-color-1);
-  border-left: none;
-  border-right: none;
-  border-bottom: none;
-}
-
 .navbar__logo {
   height: 1rem;
 }
@@ -275,4 +267,65 @@ a.menu__link {
 }
 .navbar__search {
   margin-right: 1rem;
+}
+
+/**
+* MENU
+**/
+.theme-doc-sidebar-item-category {
+  padding: 4px 0px;
+}
+
+.theme-doc-sidebar-item-category-level-1 {
+  border: 2px solid var(--theme-color-1);
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+}
+
+.theme-doc-sidebar-item-category:not(.menu__list-item--collapsed)
+  > .menu__list-item-collapsible {
+  background-color: var(--theme-color-component-1);
+  border-radius: 0px;
+  border-left: 0.25rem solid var(--theme-color-primary);
+}
+
+.theme-doc-sidebar-item-link > .menu__link--active {
+  background-color: var(--theme-color-1);
+  border-radius: 0px;
+  border-left: 0.25rem solid var(--theme-color-dynamic);
+}
+
+/**
+* Markdown
+**/
+
+p + h6,
+.h6,
+h5,
+.h5,
+h4,
+.h4,
+h3,
+.h3,
+h2,
+.h2,
+h1,
+.h1 {
+  margin-top: 2rem;
+}
+
+h6,
+.h6,
+h5,
+.h5,
+h4,
+.h4,
+h3,
+.h3,
+h2,
+.h2,
+h1,
+.h1 + p {
+  margin-bottom: 1rem;
 }
