feat: add colors table

--- a/packages/core/scss/components/_forms.scss
+++ b/packages/core/scss/components/_forms.scss
@@ -56,7 +56,7 @@
   &::-webkit-inner-spin-button {
     margin-right: -2px;
     margin-left: 2px;
-    display: none;
+    //   display: none;
   }
 
   text-align: right;
