--- a/packages/core/src/components/toast/styles/toast-container.scss
+++ b/packages/core/src/components/toast/styles/toast-container.scss
@@ -17,10 +17,10 @@
 
 .toast-container {
   display: block;
-  position: absolute;
+  position: fixed;
 }
 
 .toast-container--bottom-right {
   right: 1rem;
-  bottom: 1rem;
+  bottom: 2rem;
 }
