--- a/packages/core/src/components/menu/burger-menu.scss
+++ b/packages/core/src/components/menu/burger-menu.scss
@@ -19,27 +19,16 @@
 
   svg {
     display: inline-block;
-    fill: var(--theme-menu-btn--color);
     position: relative;
   }
+
   .line {
-    fill: none;
-    stroke: var(--theme-menu-btn--color);
-    stroke-width: 6;
-    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
-      stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .line1 {
-    stroke-dasharray: 60 207;
-    stroke-width: 6;
-  }
-  .line2 {
-    stroke-dasharray: 60 60;
-    stroke-width: 6;
-  }
-  .line3 {
-    stroke-dasharray: 60 207;
-    stroke-width: 6;
+    fill: var(--theme-menu-btn--color);
+    opacity: 1;
+    x: 2px;
+    transition: x 0.075s ease-in 0.15s, transform 0.075s ease-in-out 0.075s,
+      y 0.075s ease-in-out, opacity 0.075s linear 0.075s;
+    transform-origin: center;
   }
 }
 
@@ -54,19 +43,20 @@
 }
 
 :host(.expanded) {
-  .line1 {
-    stroke-dasharray: 90 207;
-    stroke-dashoffset: -134;
-    stroke-width: 6;
+  svg .line-1 {
+    opacity: 1;
+    transform: rotate(-45deg);
+    y: 11px;
   }
-  .line2 {
-    stroke-dasharray: 1 60;
-    stroke-dashoffset: -30;
-    stroke-width: 6;
+
+  svg .line-2 {
+    opacity: 0;
+    x: 9;
   }
-  .line3 {
-    stroke-dasharray: 90 207;
-    stroke-dashoffset: -134;
-    stroke-width: 6;
+
+  svg .line-3 {
+    opacity: 1;
+    transform: rotate(45deg);
+    y: 11px;
   }
 }
