--- a/packages/documentation/src/css/custom.css
+++ b/packages/documentation/src/css/custom.css
@@ -285,7 +285,17 @@ a.menu__link {
 }
 
 .theme-doc-sidebar-item-link > .menu__link--active {
+  position: relative;
   background-color: var(--theme-color-1);
+  border-radius: 0px;
+}
+
+.theme-doc-sidebar-item-link > .menu__link--active::before {
+  content: '';
+  position: absolute;
+  display: block;
+  height: 100%;
+  left: 0px;
   border-radius: 0px;
   border-left: 0.25rem solid var(--theme-color-dynamic);
 }
